<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:padding="30dp">
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:src="@drawable/logo"/>
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="20dp">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/edtextshape"
          android:id="@+id/edtemail"
          android:textSize="20sp"
          android:inputType="textEmailAddress"
          android:drawableEnd="@drawable/ic_baseline_email_24"
          android:hint="     Email"
          android:textColor="#0F40EF"
          />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="20dp">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:background="@drawable/edtextshape"
          android:id="@+id/edtpassword"
          android:inputType="textPassword"
          android:textSize="20sp"
          android:drawableEnd="@drawable/ic_baseline_lock_24"
          android:hint="     Password"
          android:textColor="#0F40EF"
          />
   </com.google.android.material.textfield.TextInputLayout>
   <CheckBox
       android:layout_marginTop="10dp"
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:textColor="#232DF2"
       android:text="Remember me"
       android:textStyle="bold"
       android:textSize="20sp"
       android:id="@+id/chkremember"/>
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:background="@drawable/shape"
       android:id="@+id/btnlogin"
       android:textColor="#FFF"
       android:text="Login"
       android:textSize="28sp"
       android:textStyle="bold"
       />
   
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="20dp">
      <TextView
          android:textSize="25sp"
          android:layout_margin="10dp"
          android:gravity="center"
          android:id="@+id/tvRegister"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/registeruser" />

   </LinearLayout>
</LinearLayout>


</ScrollView>