<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UpdateProfileActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayoutforprofileupdate"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update your information!!"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#06A6BA"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/Etupdatefullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="Full Name"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:textColor="#0F40EF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/EtupdatePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:hint="Phone"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:textColor="#0F40EF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/UpdateRdoGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:tooltipText="UpdateGender">

        <RadioButton
            android:id="@+id/UpdateRdoMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Male" />
        <RadioButton
            android:id="@+id/UpdateRdoFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="Female" />

        <RadioButton
            android:id="@+id/UpdateRdoOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="Other" />
    </RadioGroup>
    <Button
        android:id="@+id/btnUpdateProfileinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:text="Update profile info"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Update your Password!!"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#06A6BA"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/EtupdatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="Enter your old password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:textColor="#0F40EF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/EtupdateNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="Enter your new password"
            android:inputType="textPassword"

            android:textColor="#0F40EF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <EditText
            android:id="@+id/EtupdateConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:textColor="#0F40EF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnUpdatePasswordinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape"
        android:text="Update password"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:textStyle="bold" />
</LinearLayout>
</ScrollView>