<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".fragments.HomeFragment">
<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/Swiperefersh">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FabBtnAdd"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/plus"
            android:layout_margin="16dp" />
        
    </LinearLayout>
<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

</ScrollView>